--- a/no-iframe-ekashu.css
+++ b/no-iframe-ekashu.css
@@ -120,7 +120,14 @@ body{
 {
 	width: 50%;
 	margin: 0px auto;
-	padding: 80px 0px 0px;
+}
+
+#ekashu_header_collect_data{
+	padding-top: 80px;
+}
+
+#ekashu_content{
+	padding-bottom: 80px; 
 }
 
 .ekashu_content_card_verification_value
@@ -750,5 +757,13 @@ body{
 	{
 		width: 100%;
 		padding: 20px;
+	}
+
+	#ekashu_header_collect_data{
+		padding-top: 20px;
+	}
+
+	#ekashu_content{
+		padding-bottom: 20px; 
 	}
 }
